# warehouse18

./: .env.example  .gitignore  DB structure.txt  README.md  SKILL.md  backupDB.py  backup_warehouse18_20260209_204144.sql  dump_schema.py  make_review_zip.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  rfid_probe.py  rfid_simple_test.py  run.py  warehouse18_schema.sql
.tmp_sdk_review/UHFDemo_V5.3_EN_SRC/: .editorconfig  UHFDemo.sln
.tmp_sdk_review/UHFDemo_V5.3_EN_SRC/UHFDemo/: FactoryReset.Designer.cs  FactoryReset.cs  Program.cs  UHFDemo.Designer.cs  UHFDemo.cs  (+5 more)
config/: antenna_map.json  epc_schema.json
frontend/warehouse18-ui/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: antenna_mapping.json  cache_mySim_locations.py  cache_mySim_locations2.py  import_mysim_locations.py  load_mysim_location_groups.py  load_mysim_location_refs.py  rfid_bank_b.py  rfid_bank_probe.py  rfid_calibrate_antennas.py  rfid_collect_signatures.py  rfid_map_antennas.py  rfid_map_one.py  rfid_monitor_1_8.py  rfid_seqg_monitor.py  test_mySim.py  test_mySim_connection.py  test_mySim_create_movement.py  test_mySim_find_location_entity.py  test_mySim_set_movement.py  test_mySim_set_redirect.py
scripts/_cache/: mysim_locations.csv  mysim_locations_by_code.json  mysim_locations_by_id.json  mysim_locations_code_to_id.json  mysim_locations_duplicates.json  mysim_locations_raw.json
scripts/scripts/: antenna_signatures.json
src/warehouse18/: config.py  rfid_settings.py  warehouse-sync-worker.py  warehouse-sync-worker2.py  warehouse-sync-worker3.py
(+109 files in other folders)
